@@ -1,3 +1,7 @@
+2008-05-04  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-theme-test.c: (main): doesn't need gnome-vfs any longer
+
 2008-05-01  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-theme-info.c: (read_cursor_theme), (read_cursor_fonts),
